tests/negative/typecheck/infer_non_sum.orng
// infer_non_sum.orng:6:22: error: expected sum type for sum value, got `Int`
//     let x: Int = .lol
//                     ^
// 
fn main() -> Int {
    let x: Int = .lol
    0
}